--- a/recipe.css
+++ b/recipe.css
@@ -25,7 +25,7 @@ body {
 	font-size: 11pt;
 	
 	background-image: url("https://courses.cs.washington.edu/courses/cse190m/09sp/homework/1/silverware.jpg");
-    background-repeat: repeat-xy;
+    background-repeat: repeat;
 	background-attachment: fixed;
 
 
